// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Expect component to render properly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavBar
    classes={
        Object {
            "appBar": "test-app-bar",
            "toolbarTitle": "test-toolbar-title",
          }
    }
    value="test-value"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <WithStyles(AppBar)
        className="test-app-bar"
        position="static"
>
        <WithStyles(Toolbar)>
                <WithStyles(Typography)
                        className="test-toolbar-title"
                        color="inherit"
                        noWrap={true}
                        variant="title"
                >
                        <FormattedMessage
                                defaultMessage="[React Marketing Baseline Client]"
                                id="app.name"
                                values={Object {}}
                        />
                </WithStyles(Typography)>
                <WithStyles(Tabs)
                        fullWidth={true}
                        value={false}
                >
                        Immutable.List [
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[About]"
                                                        id="nav.about"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/about"
                                        value="/about"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Public]"
                                                        id="nav.public"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/public"
                                        value="/public"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Protected]"
                                                        id="nav.protected"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/protected"
                                        value="/protected"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Saga Example]"
                                                        id="nav.sagaExample"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/saga"
                                        value="/saga"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Logout]"
                                                        id="nav.logout"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/logout"
                                        value="/logout"
                                />,
                        ]
                </WithStyles(Tabs)>
        </WithStyles(Toolbar)>
</WithStyles(AppBar)>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <WithStyles(Toolbar)>
          <WithStyles(Typography)
                    className="test-toolbar-title"
                    color="inherit"
                    noWrap={true}
                    variant="title"
          >
                    <FormattedMessage
                              defaultMessage="[React Marketing Baseline Client]"
                              id="app.name"
                              values={Object {}}
                    />
          </WithStyles(Typography)>
          <WithStyles(Tabs)
                    fullWidth={true}
                    value={false}
          >
                    Immutable.List [
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[About]"
                                                            id="nav.about"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/about"
                                        value="/about"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Public]"
                                                            id="nav.public"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/public"
                                        value="/public"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Protected]"
                                                            id="nav.protected"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/protected"
                                        value="/protected"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Saga Example]"
                                                            id="nav.sagaExample"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/saga"
                                        value="/saga"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Logout]"
                                                            id="nav.logout"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/logout"
                                        value="/logout"
                              />,
                    ]
          </WithStyles(Tabs)>
</WithStyles(Toolbar)>,
        "className": "test-app-bar",
        "position": "static",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Typography)
              className="test-toolbar-title"
              color="inherit"
              noWrap={true}
              variant="title"
>
              <FormattedMessage
                            defaultMessage="[React Marketing Baseline Client]"
                            id="app.name"
                            values={Object {}}
              />
</WithStyles(Typography)>,
            <WithStyles(Tabs)
              fullWidth={true}
              value={false}
>
              Immutable.List [
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[About]"
                                                                      id="nav.about"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/about"
                                          value="/about"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Public]"
                                                                      id="nav.public"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/public"
                                          value="/public"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Protected]"
                                                                      id="nav.protected"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/protected"
                                          value="/protected"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Saga Example]"
                                                                      id="nav.sagaExample"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/saga"
                                          value="/saga"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Logout]"
                                                                      id="nav.logout"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/logout"
                                          value="/logout"
                            />,
              ]
</WithStyles(Tabs)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="[React Marketing Baseline Client]"
                id="app.name"
                values={Object {}}
/>,
              "className": "test-toolbar-title",
              "color": "inherit",
              "noWrap": true,
              "variant": "title",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "[React Marketing Baseline Client]",
                "id": "app.name",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Immutable.List [
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[About]"
                                                                id="nav.about"
                                                                values={Object {}}
                                                />
                                }
                                to="/about"
                                value="/about"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Public]"
                                                                id="nav.public"
                                                                values={Object {}}
                                                />
                                }
                                to="/public"
                                value="/public"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Protected]"
                                                                id="nav.protected"
                                                                values={Object {}}
                                                />
                                }
                                to="/protected"
                                value="/protected"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Saga Example]"
                                                                id="nav.sagaExample"
                                                                values={Object {}}
                                                />
                                }
                                to="/saga"
                                value="/saga"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Logout]"
                                                                id="nav.logout"
                                                                values={Object {}}
                                                />
                                }
                                to="/logout"
                                value="/logout"
                />,
],
              "fullWidth": true,
              "value": false,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "about",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[About]"
                    id="nav.about"
                    values={Object {}}
/>,
                  "to": "/about",
                  "value": "/about",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "public",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Public]"
                    id="nav.public"
                    values={Object {}}
/>,
                  "to": "/public",
                  "value": "/public",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "protected",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Protected]"
                    id="nav.protected"
                    values={Object {}}
/>,
                  "to": "/protected",
                  "value": "/protected",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "sagaExample",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Saga Example]"
                    id="nav.sagaExample"
                    values={Object {}}
/>,
                  "to": "/saga",
                  "value": "/saga",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "logout",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Logout]"
                    id="nav.logout"
                    values={Object {}}
/>,
                  "to": "/logout",
                  "value": "/logout",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <WithStyles(AppBar)
          className="test-app-bar"
          position="static"
>
          <WithStyles(Toolbar)>
                    <WithStyles(Typography)
                              className="test-toolbar-title"
                              color="inherit"
                              noWrap={true}
                              variant="title"
                    >
                              <FormattedMessage
                                        defaultMessage="[React Marketing Baseline Client]"
                                        id="app.name"
                                        values={Object {}}
                              />
                    </WithStyles(Typography)>
                    <WithStyles(Tabs)
                              fullWidth={true}
                              value={false}
                    >
                              Immutable.List [
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[About]"
                                                                      id="nav.about"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/about"
                                                  value="/about"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Public]"
                                                                      id="nav.public"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/public"
                                                  value="/public"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Protected]"
                                                                      id="nav.protected"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/protected"
                                                  value="/protected"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Saga Example]"
                                                                      id="nav.sagaExample"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/saga"
                                                  value="/saga"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Logout]"
                                                                      id="nav.logout"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/logout"
                                                  value="/logout"
                                        />,
                              ]
                    </WithStyles(Tabs)>
          </WithStyles(Toolbar)>
</WithStyles(AppBar)>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(Toolbar)>
            <WithStyles(Typography)
                        className="test-toolbar-title"
                        color="inherit"
                        noWrap={true}
                        variant="title"
            >
                        <FormattedMessage
                                    defaultMessage="[React Marketing Baseline Client]"
                                    id="app.name"
                                    values={Object {}}
                        />
            </WithStyles(Typography)>
            <WithStyles(Tabs)
                        fullWidth={true}
                        value={false}
            >
                        Immutable.List [
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[About]"
                                                                        id="nav.about"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/about"
                                                value="/about"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Public]"
                                                                        id="nav.public"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/public"
                                                value="/public"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Protected]"
                                                                        id="nav.protected"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/protected"
                                                value="/protected"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Saga Example]"
                                                                        id="nav.sagaExample"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/saga"
                                                value="/saga"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Logout]"
                                                                        id="nav.logout"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/logout"
                                                value="/logout"
                                    />,
                        ]
            </WithStyles(Tabs)>
</WithStyles(Toolbar)>,
          "className": "test-app-bar",
          "position": "static",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                className="test-toolbar-title"
                color="inherit"
                noWrap={true}
                variant="title"
>
                <FormattedMessage
                                defaultMessage="[React Marketing Baseline Client]"
                                id="app.name"
                                values={Object {}}
                />
</WithStyles(Typography)>,
              <WithStyles(Tabs)
                fullWidth={true}
                value={false}
>
                Immutable.List [
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[About]"
                                                                                id="nav.about"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/about"
                                                value="/about"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Public]"
                                                                                id="nav.public"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/public"
                                                value="/public"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Protected]"
                                                                                id="nav.protected"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/protected"
                                                value="/protected"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Saga Example]"
                                                                                id="nav.sagaExample"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/saga"
                                                value="/saga"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Logout]"
                                                                                id="nav.logout"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/logout"
                                                value="/logout"
                                />,
                ]
</WithStyles(Tabs)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="[React Marketing Baseline Client]"
                  id="app.name"
                  values={Object {}}
/>,
                "className": "test-toolbar-title",
                "color": "inherit",
                "noWrap": true,
                "variant": "title",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultMessage": "[React Marketing Baseline Client]",
                  "id": "app.name",
                  "values": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Immutable.List [
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[About]"
                                                                        id="nav.about"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/about"
                                    value="/about"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Public]"
                                                                        id="nav.public"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/public"
                                    value="/public"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Protected]"
                                                                        id="nav.protected"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/protected"
                                    value="/protected"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Saga Example]"
                                                                        id="nav.sagaExample"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/saga"
                                    value="/saga"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Logout]"
                                                                        id="nav.logout"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/logout"
                                    value="/logout"
                  />,
],
                "fullWidth": true,
                "value": false,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "about",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[About]"
                      id="nav.about"
                      values={Object {}}
/>,
                    "to": "/about",
                    "value": "/about",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "public",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Public]"
                      id="nav.public"
                      values={Object {}}
/>,
                    "to": "/public",
                    "value": "/public",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "protected",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Protected]"
                      id="nav.protected"
                      values={Object {}}
/>,
                    "to": "/protected",
                    "value": "/protected",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "sagaExample",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Saga Example]"
                      id="nav.sagaExample"
                      values={Object {}}
/>,
                    "to": "/saga",
                    "value": "/saga",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "logout",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Logout]"
                      id="nav.logout"
                      values={Object {}}
/>,
                    "to": "/logout",
                    "value": "/logout",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Header Expect component to render with selected value 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavBar
    classes={
        Object {
            "appBar": "test-app-bar",
            "toolbarTitle": "test-toolbar-title",
          }
    }
    value="/about"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <WithStyles(AppBar)
        className="test-app-bar"
        position="static"
>
        <WithStyles(Toolbar)>
                <WithStyles(Typography)
                        className="test-toolbar-title"
                        color="inherit"
                        noWrap={true}
                        variant="title"
                >
                        <FormattedMessage
                                defaultMessage="[React Marketing Baseline Client]"
                                id="app.name"
                                values={Object {}}
                        />
                </WithStyles(Typography)>
                <WithStyles(Tabs)
                        fullWidth={true}
                        value="/about"
                >
                        Immutable.List [
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[About]"
                                                        id="nav.about"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/about"
                                        value="/about"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Public]"
                                                        id="nav.public"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/public"
                                        value="/public"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Protected]"
                                                        id="nav.protected"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/protected"
                                        value="/protected"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Saga Example]"
                                                        id="nav.sagaExample"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/saga"
                                        value="/saga"
                                />,
                                <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                <FormattedMessage
                                                        defaultMessage="[Logout]"
                                                        id="nav.logout"
                                                        values={Object {}}
                                                />
                                        }
                                        to="/logout"
                                        value="/logout"
                                />,
                        ]
                </WithStyles(Tabs)>
        </WithStyles(Toolbar)>
</WithStyles(AppBar)>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <WithStyles(Toolbar)>
          <WithStyles(Typography)
                    className="test-toolbar-title"
                    color="inherit"
                    noWrap={true}
                    variant="title"
          >
                    <FormattedMessage
                              defaultMessage="[React Marketing Baseline Client]"
                              id="app.name"
                              values={Object {}}
                    />
          </WithStyles(Typography)>
          <WithStyles(Tabs)
                    fullWidth={true}
                    value="/about"
          >
                    Immutable.List [
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[About]"
                                                            id="nav.about"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/about"
                                        value="/about"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Public]"
                                                            id="nav.public"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/public"
                                        value="/public"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Protected]"
                                                            id="nav.protected"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/protected"
                                        value="/protected"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Saga Example]"
                                                            id="nav.sagaExample"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/saga"
                                        value="/saga"
                              />,
                              <WithStyles(Tab)
                                        component={[Function]}
                                        label={
                                                  <FormattedMessage
                                                            defaultMessage="[Logout]"
                                                            id="nav.logout"
                                                            values={Object {}}
                                                  />
                                        }
                                        to="/logout"
                                        value="/logout"
                              />,
                    ]
          </WithStyles(Tabs)>
</WithStyles(Toolbar)>,
        "className": "test-app-bar",
        "position": "static",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Typography)
              className="test-toolbar-title"
              color="inherit"
              noWrap={true}
              variant="title"
>
              <FormattedMessage
                            defaultMessage="[React Marketing Baseline Client]"
                            id="app.name"
                            values={Object {}}
              />
</WithStyles(Typography)>,
            <WithStyles(Tabs)
              fullWidth={true}
              value="/about"
>
              Immutable.List [
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[About]"
                                                                      id="nav.about"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/about"
                                          value="/about"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Public]"
                                                                      id="nav.public"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/public"
                                          value="/public"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Protected]"
                                                                      id="nav.protected"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/protected"
                                          value="/protected"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Saga Example]"
                                                                      id="nav.sagaExample"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/saga"
                                          value="/saga"
                            />,
                            <WithStyles(Tab)
                                          component={[Function]}
                                          label={
                                                        <FormattedMessage
                                                                      defaultMessage="[Logout]"
                                                                      id="nav.logout"
                                                                      values={Object {}}
                                                        />
                                          }
                                          to="/logout"
                                          value="/logout"
                            />,
              ]
</WithStyles(Tabs)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="[React Marketing Baseline Client]"
                id="app.name"
                values={Object {}}
/>,
              "className": "test-toolbar-title",
              "color": "inherit",
              "noWrap": true,
              "variant": "title",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "[React Marketing Baseline Client]",
                "id": "app.name",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Immutable.List [
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[About]"
                                                                id="nav.about"
                                                                values={Object {}}
                                                />
                                }
                                to="/about"
                                value="/about"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Public]"
                                                                id="nav.public"
                                                                values={Object {}}
                                                />
                                }
                                to="/public"
                                value="/public"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Protected]"
                                                                id="nav.protected"
                                                                values={Object {}}
                                                />
                                }
                                to="/protected"
                                value="/protected"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Saga Example]"
                                                                id="nav.sagaExample"
                                                                values={Object {}}
                                                />
                                }
                                to="/saga"
                                value="/saga"
                />,
                <WithStyles(Tab)
                                component={[Function]}
                                label={
                                                <FormattedMessage
                                                                defaultMessage="[Logout]"
                                                                id="nav.logout"
                                                                values={Object {}}
                                                />
                                }
                                to="/logout"
                                value="/logout"
                />,
],
              "fullWidth": true,
              "value": "/about",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "about",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[About]"
                    id="nav.about"
                    values={Object {}}
/>,
                  "to": "/about",
                  "value": "/about",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "public",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Public]"
                    id="nav.public"
                    values={Object {}}
/>,
                  "to": "/public",
                  "value": "/public",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "protected",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Protected]"
                    id="nav.protected"
                    values={Object {}}
/>,
                  "to": "/protected",
                  "value": "/protected",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "sagaExample",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Saga Example]"
                    id="nav.sagaExample"
                    values={Object {}}
/>,
                  "to": "/saga",
                  "value": "/saga",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "logout",
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "label": <FormattedMessage
                    defaultMessage="[Logout]"
                    id="nav.logout"
                    values={Object {}}
/>,
                  "to": "/logout",
                  "value": "/logout",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <WithStyles(AppBar)
          className="test-app-bar"
          position="static"
>
          <WithStyles(Toolbar)>
                    <WithStyles(Typography)
                              className="test-toolbar-title"
                              color="inherit"
                              noWrap={true}
                              variant="title"
                    >
                              <FormattedMessage
                                        defaultMessage="[React Marketing Baseline Client]"
                                        id="app.name"
                                        values={Object {}}
                              />
                    </WithStyles(Typography)>
                    <WithStyles(Tabs)
                              fullWidth={true}
                              value="/about"
                    >
                              Immutable.List [
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[About]"
                                                                      id="nav.about"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/about"
                                                  value="/about"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Public]"
                                                                      id="nav.public"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/public"
                                                  value="/public"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Protected]"
                                                                      id="nav.protected"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/protected"
                                                  value="/protected"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Saga Example]"
                                                                      id="nav.sagaExample"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/saga"
                                                  value="/saga"
                                        />,
                                        <WithStyles(Tab)
                                                  component={[Function]}
                                                  label={
                                                            <FormattedMessage
                                                                      defaultMessage="[Logout]"
                                                                      id="nav.logout"
                                                                      values={Object {}}
                                                            />
                                                  }
                                                  to="/logout"
                                                  value="/logout"
                                        />,
                              ]
                    </WithStyles(Tabs)>
          </WithStyles(Toolbar)>
</WithStyles(AppBar)>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <WithStyles(Toolbar)>
            <WithStyles(Typography)
                        className="test-toolbar-title"
                        color="inherit"
                        noWrap={true}
                        variant="title"
            >
                        <FormattedMessage
                                    defaultMessage="[React Marketing Baseline Client]"
                                    id="app.name"
                                    values={Object {}}
                        />
            </WithStyles(Typography)>
            <WithStyles(Tabs)
                        fullWidth={true}
                        value="/about"
            >
                        Immutable.List [
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[About]"
                                                                        id="nav.about"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/about"
                                                value="/about"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Public]"
                                                                        id="nav.public"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/public"
                                                value="/public"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Protected]"
                                                                        id="nav.protected"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/protected"
                                                value="/protected"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Saga Example]"
                                                                        id="nav.sagaExample"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/saga"
                                                value="/saga"
                                    />,
                                    <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                            <FormattedMessage
                                                                        defaultMessage="[Logout]"
                                                                        id="nav.logout"
                                                                        values={Object {}}
                                                            />
                                                }
                                                to="/logout"
                                                value="/logout"
                                    />,
                        ]
            </WithStyles(Tabs)>
</WithStyles(Toolbar)>,
          "className": "test-app-bar",
          "position": "static",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                className="test-toolbar-title"
                color="inherit"
                noWrap={true}
                variant="title"
>
                <FormattedMessage
                                defaultMessage="[React Marketing Baseline Client]"
                                id="app.name"
                                values={Object {}}
                />
</WithStyles(Typography)>,
              <WithStyles(Tabs)
                fullWidth={true}
                value="/about"
>
                Immutable.List [
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[About]"
                                                                                id="nav.about"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/about"
                                                value="/about"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Public]"
                                                                                id="nav.public"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/public"
                                                value="/public"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Protected]"
                                                                                id="nav.protected"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/protected"
                                                value="/protected"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Saga Example]"
                                                                                id="nav.sagaExample"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/saga"
                                                value="/saga"
                                />,
                                <WithStyles(Tab)
                                                component={[Function]}
                                                label={
                                                                <FormattedMessage
                                                                                defaultMessage="[Logout]"
                                                                                id="nav.logout"
                                                                                values={Object {}}
                                                                />
                                                }
                                                to="/logout"
                                                value="/logout"
                                />,
                ]
</WithStyles(Tabs)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="[React Marketing Baseline Client]"
                  id="app.name"
                  values={Object {}}
/>,
                "className": "test-toolbar-title",
                "color": "inherit",
                "noWrap": true,
                "variant": "title",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultMessage": "[React Marketing Baseline Client]",
                  "id": "app.name",
                  "values": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Immutable.List [
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[About]"
                                                                        id="nav.about"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/about"
                                    value="/about"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Public]"
                                                                        id="nav.public"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/public"
                                    value="/public"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Protected]"
                                                                        id="nav.protected"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/protected"
                                    value="/protected"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Saga Example]"
                                                                        id="nav.sagaExample"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/saga"
                                    value="/saga"
                  />,
                  <WithStyles(Tab)
                                    component={[Function]}
                                    label={
                                                      <FormattedMessage
                                                                        defaultMessage="[Logout]"
                                                                        id="nav.logout"
                                                                        values={Object {}}
                                                      />
                                    }
                                    to="/logout"
                                    value="/logout"
                  />,
],
                "fullWidth": true,
                "value": "/about",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "about",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[About]"
                      id="nav.about"
                      values={Object {}}
/>,
                    "to": "/about",
                    "value": "/about",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "public",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Public]"
                      id="nav.public"
                      values={Object {}}
/>,
                    "to": "/public",
                    "value": "/public",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "protected",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Protected]"
                      id="nav.protected"
                      values={Object {}}
/>,
                    "to": "/protected",
                    "value": "/protected",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "sagaExample",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Saga Example]"
                      id="nav.sagaExample"
                      values={Object {}}
/>,
                    "to": "/saga",
                    "value": "/saga",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "logout",
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "label": <FormattedMessage
                      defaultMessage="[Logout]"
                      id="nav.logout"
                      values={Object {}}
/>,
                    "to": "/logout",
                    "value": "/logout",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
